# backend/api/src/app/Http/Requests/Auth/RegisterRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Requests\Auth;
 
+use App\Http\Traits\ValidationTrait;
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
@@ -9,18 +10,28 @@ use OpenApi\Attributes as OAT;
 
 #[OAT\Schema(
     schema: 'RegisterRequest',
-    required: ['name', 'email', 'password', 'password_confirmation'],
+    required: ['first_name', 'last_name', 'email', 'password', 'password_confirmation'],
     properties: [
         new OAT\Property(
-            property: 'name',
+            property: 'first_name',
             type: 'string',
-            example: 'John Doe'
+            example: 'John'
+        ),
+        new OAT\Property(
+            property: 'last_name',
+            type: 'string',
+            example: 'Doe'
         ),
         new OAT\Property(
             property: 'email',
             type: 'string',
             format: 'email',
             example: 'john@example.com'
+        ),
+        new OAT\Property(
+            property: 'username',
+            type: 'string',
+            example: 'john_doe123'
         ),
         new OAT\Property(
             property: 'password',
@@ -36,6 +47,8 @@ use OpenApi\Attributes as OAT;
 )]
 class RegisterRequest extends FormRequest
 {
+    use ValidationTrait;
+
     /**
      * Get the validation rules that apply to the request.
      *
@@ -44,8 +57,10 @@ class RegisterRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'name' => ['required', 'string'],
+            'first_name' => ['required', 'string'],
+            'last_name' => ['required', 'string'],
             'email' => ['required', 'string', 'email', Rule::unique('users', 'email')->ignore(null),],
+            'username' => ['required', 'string', Rule::unique('users', 'username')->ignore(null),],
             'password' => ['required', 'string'],
             'password_confirmation' => ['required', 'string']
         ];
